autobuilder (4.4.3) unstable; urgency=low

  * Adds the Release-Alias option
  * Sort dependencies so newest version appears first in the list of OR relations

 -- David Fox <dsf@seereason.com>  Wed, 20 Feb 2008 11:50:34 -0800

autobuilder (4.4.2) unstable; urgency=low

  * Fix messaging when we fail to prepare the source code of a target,
    it was just exiting silently.  (Closes case 37)

 -- David Fox <ddssff@gmail.com>  Wed, 13 Feb 2008 22:16:59 -0800

autobuilder (4.4.1) unstable; urgency=low

  * Update build dependencies

 -- Jeremy Shaw <jeremy@n-heptane.com>  Tue, 12 Feb 2008 17:30:38 -0800

autobuilder (4.4) unstable; urgency=low

  * Writing repository cache was failing because the read and write
    functions were interfering with each other.  Patch haskell-regex-base.
  * Abort if we fail to prepare the source code of any of the targets.
    Since we don't know what binary packages a source package will produce
    we can't determine which subsequent packages might be affected.
  * Progress reporting improvements.

 -- David Fox <dsf@seereason.com>  Wed, 06 Feb 2008 22:15:45 -0800

autobuilder (4.3) unstable; urgency=low

  * Implement Use-Repo-Cache, which loads the most recent repository
    information to avoid long queries of remote servers.

 -- David Fox <ddssff@gmail.com>  Wed, 06 Feb 2008 16:02:19 -0800

autobuilder (4.2) unstable; urgency=low

  * Fix a VersionPolicy bug
  * Revamp progress reporting

 -- David Fox <dsf@seereason.com>  Mon, 04 Feb 2008 13:58:10 -0800

autobuilder (4.1) unstable; urgency=low

  * Use rewritten Debian.VersionPolicy module, vendor tags will always
    be added to version numbers unless the --do-not-change-version flag
    is given.
  * Configuration updates to use new merged ubuntu and debian repositories.
  * Add a Release-Alias parameter, to tell autobuilder to use bpo40+ for
    the etch release name when constructing versions.
  * Eliminate some uncaught exceptions so execution can continue when target