@@ -2,6 +2,7 @@ autobuilder (4.4.3) unstable; urgency=low
 
   * Adds the Release-Alias option
   * Sort dependencies so newest version appears first in the list of OR relations
+  * If no build dependencies changed, don't add a changelog entry about it.
 
  -- David Fox <dsf@seereason.com>  Wed, 20 Feb 2008 11:50:34 -0800
 
